force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/agf__ADM_Release_Event__c.object-meta.xml
<CustomObject>
    <description>Release Events are generated from Release Event Items of an Application when applied to a specific Release</description>
    <label>Release Event</label>
    <nameField>
        <label>Release Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>