force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/fields/agf__Application_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Application_Name__c</fullName>
    <formula>agf__Release__r.agf__Application__r.Name</formula>
    <label>Application Name</label>
    <type>Text</type>
</CustomField>