force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/fields/agf__Application_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Application_Type__c</fullName>
    <description>The Application Type of the Application of the Release which this Release Event is associated with.</description>
    <formula>TEXT(agf__Release__r.agf__Application__r.agf__Application_Type__c)</formula>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>