force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/fields/agf__Customer_Facing_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Customer_Facing_Name__c</fullName>
    <description>Customer-facing name for this Release Event. When field is blank, the event is not customer-facing.</description>
    <inlineHelpText>Customer-facing name for this Release Event. When field is blank, the event is not customer-facing.</inlineHelpText>
    <label>Customer Facing Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>