force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/fields/agf__Deployment_Instances__c.field-meta.xml
<CustomField>
    <fullName>agf__Deployment_Instances__c</fullName>
    <description>This is a space-separated list of instances which will participate in this Release Event</description>
    <inlineHelpText>Space-separated list of instances which will participate in this Release Event (eg, &quot;NA1 NA2 CS3&quot;)</inlineHelpText>
    <label>Deployment Instances</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>