force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/fields/agf__Event_Contact__c.field-meta.xml
<CustomField>
    <fullName>agf__Event_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person to contact for issues and questions about this Release Event.</description>
    <inlineHelpText>Person to contact for issues and questions about this Release Event.</inlineHelpText>
    <label>Event Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Events</relationshipName>
    <type>Lookup</type>
</CustomField>