force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/fields/agf__Origination__c.field-meta.xml
<CustomField>
    <fullName>agf__Origination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Release Event Template from which this Release Event originated.</description>
    <label>Origination</label>
    <referenceTo>agf__ADM_Release_Event_Template__c</referenceTo>
    <relationshipLabel>Release Events</relationshipLabel>
    <relationshipName>Release_Events</relationshipName>
    <type>Lookup</type>
</CustomField>