force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/fields/agf__Release_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Type__c</fullName>
    <description>The Release Type of the Release this Release Event is associated with.</description>
    <formula>TEXT(agf__Release__r.agf__Release_Type__c)</formula>
    <label>Release Type</label>
    <type>Text</type>
</CustomField>