force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/fields/agf__Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_End__c</fullName>
    <description>Scheduled End for the Release Event</description>
    <inlineHelpText>Scheduled end time of the Release Event.</inlineHelpText>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>