force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/fields/agf__Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Start__c</fullName>
    <description>Start time of the Release Event</description>
    <inlineHelpText>Scheduled start time of the Release Event</inlineHelpText>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>