force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/validationRules/agf__End_Time_cannot_be_before_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__End_Time_cannot_be_before_Start_Time</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Scheduled_Start__c &gt; agf__Scheduled_End__c</errorConditionFormula>
    <errorDisplayField>agf__Scheduled_End__c</errorDisplayField>
    <errorMessage>Event End Time cannot be before Start Time.</errorMessage>
</ValidationRule>