force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event__c/validationRules/agf__End_Time_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__End_Time_must_be_set</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(agf__Scheduled_End__c)</errorConditionFormula>
    <errorDisplayField>agf__Scheduled_End__c</errorDisplayField>
    <errorMessage>Event End Time must be set.</errorMessage>
</ValidationRule>